# universe

./: .gitignore  .gitmodules  .pre-commit  .travis.yml  Cargo.toml  README.md  build.rs  config.toml  gshrc  makefile  thoughts.md  thoughts.wiki
benches/: channel_speed.rs  static_dynamic_dispatch.rs
crates/benchmarker/: Cargo.toml  lib.rs
crates/cmdmat/: lib.rs
crates/draw/: lib.rs  main.rs  main2.rs
crates/geometry/: .gitignore  Cargo.toml
crates/geometry/src/: boxit.rs  grid2d.rs  vec.rs
crates/input/: Cargo.toml  lib.rs
crates/ketimer/: Cargo.toml  lib.rs
crates/metac/: lib.rs
crates/udp_ack/: Cargo.toml
crates/udp_ack/src/: conn.rs  lib.rs
crates/winput/: Cargo.toml  lib.rs
libs/benchmarker/: Cargo.toml  lib.rs
libs/cmdmat/: Cargo.toml  lib.rs
libs/config/: Cargo.toml  lib.rs
libs/draw/: .gitignore  Cargo.toml  lib.rs  main.rs  main2.rs
libs/gameshell/: Cargo.toml  lib.rs
libs/geometry/: Cargo.toml
libs/geometry/src/: cam.rs  lib.rs  vec.rs
libs/input/: Cargo.toml  lib.rs
libs/ketimer/: Cargo.toml  lib.rs
libs/logger/: lib.rs
libs/metac/: Cargo.toml  lib.rs
libs/net/: .gitignore  Cargo.toml
libs/net/src/: conn.rs  lib.rs  msg.rs  pkt.rs
libs/udp_ack/src/: lib.rs  pkt.rs
scripts/: check-formatting  flame.sh  lint  run-all  run-all-benchmarks  run-all-tests  run-fuzzing-tests  run-vulkan-validation
shaders/: proc1.frag  proc1.vert  xy_col_tr.frag  xy_col_tr.vert  xy_tr.frag  xy_tr.vert  xyuv_tex.frag
src/: README.md  cli.rs  component.rs  conf.rs  err.rs  game.rs  global.rs  glocals.rs  input.rs  lib.rs  main.rs  main_state.rs  mediators.rs  net.rs  srv.rs  tilenet_gen.rs
src/addons/: mod.rs  tilenet_gen.rs
src/addons/cli/: mod.rs
src/addons/collision/: mod.rs  polygon.rs  ray.rs
src/addons/graphics/: mod.rs
src/addons/graphics/ren/: lines.rs  polygons.rs
src/addons/srv/: diff.rs  game.rs  mod.rs  system.rs
src/cli/: cam.rs  game.rs  mod.rs
src/collision/: mod.rs  polygon.rs  ray.rs
src/game/: client.rs  mod.rs  server.rs
src/geometry/: mod.rs  polygon.rs  ray.rs  vec.rs
src/glocals/: cam.rs  component.rs  conf.rs  config.rs  game.rs  input.rs  log.rs  mod.rs  msg.rs  vxdraw.rs
src/graphics/: mod.rs
src/graphics/ren/: lines.rs  mod.rs  polygons.rs
src/libs/: benchmarker.rs  metac.rs  mod.rs
src/libs/geometry/: bocs.rs  boxit.rs  cam.rs  grid2d.rs  mod.rs  vec.rs
src/libs/input/: mod.rs
src/libs/net/: conn.rs  mod.rs  msg.rs  pkt.rs
src/mediators/: client.rs  collision.rs  does_line_collide_with_grid.rs  game_shell.rs  logger.rs  mod.rs  random_map_generator.rs  render_grid.rs  render_polygon.rs  server.rs  testtools.rs  vxdraw.rs
src/mediators/game_shell/: command_handlers.rs  incconsumer.rs  predicates.rs  types.rs
src/mediators/vxdraw/: debtri.rs  dyntex.rs  quads.rs  strtex.rs  utils.rs
src/net/: conn.rs  mod.rs  msg.rs  pkt.rs
src/srv/: diff.rs  game.rs  mod.rs  system.rs
src/world/: color.rs  gen.rs  iter.rs  jump.rs  mod.rs  player.rs
tests/fuzz/: .gitignore  Cargo.toml  fuzz_gsh.rs  grid.rs  gsh.rs
