[package]
name = "universe"
version = "0.3.0"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[lib]
name = "universe"
path = "src/lib.rs"

[dependencies]
bincode = "1.0.1"
byteorder = "1.2.7"
chrono = "0.4.6"
clap = "2.32.0"
derive_more = "0.11.0"
failure = "0.1.1"
glium = "0.16.0"
honggfuzz = "0.5"
rand = "0.6.1"
rodio = "0.8.1"
rustyline = "3.0.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.40"
toml = "0.4.9"

gfx = "0.17"
gfx_window_sdl = "0.8"
sdl2 = "0.31"

[dev-dependencies]
regex = "1.1.0"
slog-async = "2.3"
slog-json = "2.3"
slog-scope = "4"
slog-stream = "1.2"
slog-term = "2.3"
# slog = { version = "2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog = "2.3"

[features]
default = []
dev = []

[profile.release]
debug = true

[profile.dev]
codegen-units = 4
