[package]
name = "universe"
version = "0.3.0"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[lib]
name = "universe"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.4"
bincode = "1.0.1"
byteorder = "1.2.7"
cgmath = "0.17"
chrono = "0.4.6"
clap = "2.32.0"
derive_more = "0.11.0"
either = "1.5.0"
failure = "0.1.1"
gfx = "0.17"
gfx-backend-dx12 = { version = "0.1", optional = true }
gfx-backend-gl = { version = "0.1", optional = true }
gfx-backend-metal = { version = "0.1", optional = true }
gfx-backend-vulkan = { version = "0.1", optional = true }
gfx-hal = "0.1"
gfx_window_sdl = "0.8"
glium = "0.16.0"
glsl-to-spirv = "0.1.4"
honggfuzz = "0.5"
image = "0.19"
priority-queue = "0.5.2"
rand = "0.6.1"
rodio = "0.8.1"
rustyline = "3.0.0"
sdl2 = "0.31"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.40"
toml = "0.4.9"
winit = "0.18"

# Local libraries
benchmarker = { path = "libs/benchmarker" }
cmdmat =      { path = "libs/cmdmat" }
config =      { path = "libs/config" }
geometry =    { path = "libs/geometry" }
input =       { path = "libs/input" }
ketimer =     { path = "libs/ketimer"  }
logger =      { path = "libs/logger" }
metac =       { path = "libs/metac" }
udp_ack =     { path = "libs/udp_ack" }

[dev-dependencies]
regex = "1.1.0"
slog-async = "2.3"
slog-json = "2.3"
slog-scope = "4"
slog-stream = "1.2"
slog-term = "2.3"
# slog = { version = "2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog = "2.3"

[features]
default = ["vulkan"]
dev = []
dx12 = ["gfx-backend-dx12"]
gl = ["gfx-backend-gl"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]
gfx_tests = []

[profile.release]
debug = true
opt-level = 3

[profile.dev]
codegen-units = 4

[profile.bench]
debug = true
lto = true
opt-level = 3
overflow-checks = false
