[package]
name = "universe"
version = "0.3.0"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "universe"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.4"
bincode = "1.1.4"
byteorder = "1.2.7"
cgmath = "0.17"
chrono = "0.4.6"
clap = "2.33.0"
either = "1.5.0"
failure = "0.1.1"
file-rotate = "0.1"
fast-logger = "0.4.0"
image = "0.21"
rand = "0.6.1"
rand_pcg = "0.1.2"
rodio = "0.8.1"
rustyline = "4.1.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.40"
toml = "0.4.9"
winit = "0.19.0"
laminar = { git = "https://github.com/amethyst/laminar.git" }
crossbeam-channel = "0.3.8" # For laminar
bimap = "0.3.1"
indexmap = "1.0.2"

# Local libraries
# benchmarker = { path = "crates/benchmarker" }
gameshell =   { path = "crates/gameshell" }
config =      { path = "crates/config" }
geometry =    { path = "crates/geometry" }
input =       { path = "crates/input" }
# ketimer =     { path = "crates/ketimer"  }
vxdraw =      { path = "crates/vxdraw" }

[dev-dependencies]
gameshell =   { path = "crates/gameshell", features = ["with-quickcheck"] }
itertools = "0.8"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand_pcg = "0.1.2"
regex = "1.1.0"

[features]
default = []
dev = []

[profile.release]
debug = true
opt-level = 3

[profile.dev]
codegen-units = 4

[profile.bench]
debug = true
lto = true
opt-level = 3
overflow-checks = false
