[package]
name = "hal-examples"
version = "0.1.0"
publish = false
edition = "2018"

[lib]
name = "draw"
path = "lib.rs"

[features]
default = ["gl"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "quad"
path = "main.rs"

[[bin]]
name = "main2"
path = "main2.rs"

[dependencies]
chrono = "0.4.6"
env_logger = "0.5"
image = "0.19"
log = "0.4"
winit = "0.18"
glsl-to-spirv = "0.1.4"
gfx-hal = { path = "../../../gfx/src/hal",  version = "0.1" }
gfx-backend-gl = { path = "../../../gfx/src/backend/gl", optional = true }
# gfx-hal = { version = "0.1" }
gfx-backend-empty = { version = "0.1" }

# [dependencies.gfx-backend-gl]
# version = "0.1"
# features = ["glutin"]
# optional = true

[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true
