[package]
name = "net"
version = "0.0.0"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[lib]
name = "net"
path = "src/lib.rs"

[dependencies]
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.40"
bincode = "1.0.1"
