[package]
name = "net"
version = "0.0.0"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[lib]
name = "net"
path = "src/lib.rs"

[dependencies]
bincode = "1.0.1"
failure = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
time = "0.1.40"

[dev-dependencies]
